# risex-ai-bot

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  fly.toml  pyproject.toml  run_trading_bot.py  start.py  start_bot.py  test_automated_trading.py  test_chat_direct.py  test_chat_simple.py  test_chat_simple_no_tools.py  test_end_to_end.py  test_mock_profiles.py
app/: __init__.py  config.py  models.py  pending_actions.py  trader_profiles.py
data/: chat_influence_results.json  chat_test_results.json  trading_decisions.json
docs/: DATA_MANAGEMENT.md  DEPLOYMENT.md  NEW_PROFILE_CREATION.md  ORDER_PLACEMENT.md  PROFILE_MANAGEMENT_GUIDE.md  PROMPT_SYSTEM.md  placing_orders.md
examples/: place_order_example.py
scripts/: check_actual_deposits.py  check_live_bot_status.py  check_order_and_positions.py  check_trade_history.py  cleanup_and_fresh_test.py  complete_curve_registration.py  create_clean_deployment.py  create_curve_profiles.py  create_fresh_profile.py  debug_rise_api_response.py  debug_trade_tracking.py  deploy.sh  deploy_to_fly.sh  final_production_check.py  fix_deposit_amounts.py  prepare_deployment_data.py  repair_data_files.py  reset_profiles.py  run_bot_once.py  run_enhanced_bot.py  run_trading_bot.py  setup_test_accounts.py  show_midwit_portfolio.py  test_correct_min_size.py  test_curve_trading.py  test_docker.sh  test_doge_position.py  test_equity_monitor.py  test_equity_rpc.py  test_fixed_rise_api.py  test_fresh_account_flow.py  test_full_system.py  test_local_system.py  (+13 more)
(+111 files in other folders)
